# ML-Queue

./: README.md  pyproject.toml
data/: centralized_0_scripted.pt  centralized_scaler.pkl  data.json  lines.csv
rpc/: rpc_client.py  rpc_server.py
tests/: pytorch_model.py
