[tool.poetry]
name = "detection-queues"
version = "0.1.0"
description = ""
authors = ["Mochaeng"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
torch = "^2.3.0"
joblib = "^1.4.2"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
